Applied https://github.com/jvm-profiling-tools/perf-map-agent/pull/83/files